# openslam_people2d

./: CMakeLists.txt  LICENSE_SHORT  people2D_training_example.sh  people2D_training_example_multiprocessor.sh
MATLAB/: showdetection.m  showpr_curve.m  showsegments.m
build_tools/: FindGSL.cmake
external_bin/: adaboost_train32  adaboost_train32_MP  adaboost_train64  adaboost_train64_MP
lib/: CMakeLists.txt  lfeatures.cpp  lgeometry.cpp
utils/: CMakeLists.txt  people2D_detect.cpp  people2D_dumpfeats.cpp  people2D_engine.cpp  people2D_engine.hpp
